# pegon

./: .clippy.toml  .deny.toml  .editorconfig  .gitattributes  .gitignore  .npmrc  .oxlintrc.json  .perfconfig  .pre-commit-config.yml  .tsqueryrc.json  .typos.toml  .vscodeignore  .yamlfmt.yml  .yamllint.yml  Cargo.toml  Makefile  README.md  build.rs  committed.toml  deny.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cargo/: config.toml
.github/: codeql-config.yml  dependabot.yml  release.yml
.github/workflows/: actions.yml  ci.yml  codeql.yml  dependency-submission.yml  release.yml
client/vscode/: package-lock.json  package.json  tsconfig.json
client/vscode/src/: extension.ts
contrib/completions/: _pegon  _pegon.ps1  pegon.bash  pegon.elv  pegon.fish
docs/: README.md  linter.md
docs/completions/: _pegon  _pegon.ps1  pegon.elv  pegon.fish
docs/man/: pegon-check.1  pegon-format.1  pegon-server.1  pegon.1
queries/java/: README.md  analysis.scm  definitions.scm  diagnostics.scm  folds.scm  highlights.scm  hints.scm  hover.scm  lint.scm  locals.scm  scopes.scm  semantic_tokens.scm  symbols.scm  tokens.scm
src/: cli.rs  console.rs  diagnostics.rs  formatting.rs  lib.rs  lint.rs  lsp.rs  main.rs  support.rs
src/cli/: analyze.rs  check.rs  diagnostics.rs  generated.rs  parser.rs
src/lsp/: analysis.rs  client.rs  code_action.rs  definition.rs  diagnostics.rs  document.rs  document_highlight.rs  document_symbols.rs  encoding.rs  folding_range.rs  hover.rs  initialize.rs  inlay_hints.rs  locals.rs  open_document.rs  selection_range.rs  semantic_cache.rs  semantic_scopes.rs  semantic_tokens.rs  server.rs  sync.rs  test_client.rs  workspace_symbols.rs
src/support/: diagnostics.rs  index.rs  queries.rs  scopes.rs
tests/: cli_check.rs  lsp.rs  lsp_client.rs  lsp_definition.rs  lsp_diagnostics.rs  lsp_document_highlight.rs  lsp_document_symbols.rs  lsp_folding_range.rs  lsp_hover.rs  lsp_inlay_hints.rs  lsp_selection_range.rs  mytest.rs
vscode/: extension.ts
xtask/: Cargo.toml
xtask/src/: main.rs
