[package]
name = "pegon"
description = "A slightly fast Java linter and code formatter, written in Rust."
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/rmuir/pegon"
repository = "https://github.com/rmuir/pegon"
documentation = "https://github.com/rmuir/pegon/wiki"
authors = ["Robert Muir <rmuir@apache.org>"]
keywords = ["java", "linter", "formatter", "language-server", "static-analysis"]
categories = ["command-line-utilities", "development-tools", "text-editors"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev]
debug = "line-tables-only"
lto = "off"

[profile.dev.package."*"]
debug = "none"

[dependencies]
# Templates diagnostic errors
aho-corasick = "1.1.4"
# Renders console diagnostics
annotate-snippets = "0.12.11"
# ANSI styling of console output
anstream = "0.6.21"
# Error handling
anyhow = "1.0.101"
# Caching already-processed files
blake3 = "1.8.3"
# CLI argument processing
clap = { version = "4.5.58", features = ["derive"] }
# Traversing directories, respecting ignore files
ignore = "0.4.25"
# LSP support
lsp-server = "0.7.9"
# LSP support
crossbeam-channel = "0.5.15"
# LSP data structures
lsp-types = "0.97"
# serialization
serde = "1.0.228"
# json serialization
serde_json = "1.0.149"
# convert offsets <-> lsp positions
line-index = "0.1.2"
# hash map that is fast and not secure-stupid
rustc-hash = "2.1.1"
# Parser framework
tree-sitter = "0.26.5"
# Parser for java language
tree-sitter-java = "0.23.5"

[dev-dependencies]
# indented string literals in tests
indoc = "2.0.7"

[lints]
workspace = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# discourages writing tests
missing_panics_doc = "allow"
# useless lint, standardize the tests
needless_raw_string_hashes = "allow"

# lots of the restriction ones are no good
absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
default_numeric_fallback = "allow"
doc_paragraphs_missing_punctuation = "allow"
else_if_without_else = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
field_scoped_visibility_modifiers = "allow"
implicit_return = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
needless_raw_strings = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"

# TODO: uses can be reduced
as_conversions = "allow"
indexing_slicing = "allow"
expect_used = "allow"
panic = "allow"
pattern_type_mismatch = "allow"
print_stdout = "allow"
print_stderr = "allow"
todo = "allow"
unneeded_field_pattern = "allow"
use_debug = "allow"
