[package]
name = "pegon"
description = "Fast linter for the Google Java Style"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/rmuir/pegon"
repository = "https://github.com/rmuir/pegon"
documentation = "https://github.com/rmuir/pegon/wiki"
authors = ["Robert Muir <rmuir@apache.org>"]
keywords = ["java", "linter", "language-server", "static-analysis"]
categories = ["command-line-utilities", "development-tools", "text-editors"]

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"

# optimize the hotspots for speed
[profile.release.package."regex-automata"]
opt-level = 3

[profile.release.package."tree-sitter"]
opt-level = 3

[profile.release.package."tree-sitter-java-orchard"]
opt-level = 3

[profile.dev]
debug = "none"
lto = "off"

# optimize the hotspots to speed up dev runs
[profile.dev.package."regex-automata"]
opt-level = 1

[profile.dev.package."tree-sitter"]
opt-level = 1

[profile.dev.package."tree-sitter-java-orchard"]
opt-level = 1

# for use with linux perf
# RUSTFLAGS="-C force-frame-pointers=yes" must also be set.
[profile.profiling]
inherits = "release"
debug = "full"
lto = "off"

[dependencies]
# Templates diagnostic errors
aho-corasick = "1.1.4"
# Renders console diagnostics
annotate-snippets = { version = "0.12.15", features = ["simd"] }
# ANSI styling of console output
anstream = "1.0.0"
# Error handling
anyhow = "1.0.102"
# CLI argument processing
clap = { version = "4.6.1", features = ["derive", "env"] }
# Traversing directories, respecting ignore files
ignore = "0.4.25"
# LSP support
lsp-server = "0.7.9"
# LSP data structures
ls-types = "0.0.6"
# serialization
serde = "1.0.228"
# json serialization
serde_json = "1.0.149"
# convert offsets <-> lsp positions
line-index = "0.1.2"
# Parser framework
tree-sitter = "0.26.8"
# Parser framework
tree-sitter-language = "0.1.7"
# Parser for java language
tree-sitter-java-orchard = "0.5.6"

[dev-dependencies]
# indented string literals in tests
indoc = "2.0.7"
# LSP test support
crossbeam-channel = "0.5.15"

[lints]
workspace = true

[workspace]
members = [".", "xtask"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# discourages writing tests
missing_panics_doc = "allow"
# useless lint, standardize the tests
needless_raw_string_hashes = "allow"

# lots of the restriction ones are no good
absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
default_numeric_fallback = "allow"
doc_paragraphs_missing_punctuation = "allow"
else_if_without_else = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
field_scoped_visibility_modifiers = "allow"
implicit_return = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
needless_raw_strings = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
too_many_lines = "allow"

# TODO: uses can be reduced
as_conversions = "allow"
indexing_slicing = "allow"
expect_used = "allow"
panic = "allow"
pattern_type_mismatch = "allow"
print_stdout = "allow"
print_stderr = "allow"
todo = "allow"
unneeded_field_pattern = "allow"
use_debug = "allow"
