[package]
name = "pegon"
version = "1.0.6"
edition = "2024"
description = "Fast Java language server"
readme = "README.md"
homepage = "https://github.com/rmuir/pegon"
repository = "https://github.com/rmuir/pegon"
license = "Apache-2.0"
keywords = ["java", "language-server", "linter", "static-analysis"]
categories = ["command-line-utilities", "development-tools", "text-editors"]
exclude = [".*", "Makefile", "docs", "pyproject.toml", "uv.lock"]

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# lots of the restriction ones are no good
absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
default_numeric_fallback = "allow"
doc_paragraphs_missing_punctuation = "allow"
else_if_without_else = "allow"
implicit_return = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
missing_trait_methods = "allow"
needless_raw_strings = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
too_many_lines = "allow"

# or even just plain buggy
inline_modules = "allow"

# TODO: uses can be reduced
as_conversions = "allow"
expect_used = "allow"
panic = "allow"
pattern_type_mismatch = "allow"
print_stderr = "allow"
print_stdout = "allow"
todo = "allow"

[lib]
path = "src/lib.rs"

[dependencies]
# Templates diagnostic errors
aho-corasick = "=1.1.4"
# Renders console diagnostics
annotate-snippets = { version = "=0.12.16", features = ["simd"] }
# ANSI styling of console output
anstream = "=1.0.0"
# Error handling
anyhow = "=1.0.104"
# Generation of LSP result_id
blake3 = { version = "=1.8.5" }
# indexing support
bstr = "=1.13.0"
# CLI argument processing
clap = { version = "=4.6.4", features = ["derive"] }
# threading support
crossbeam-channel = "=0.5.16"
# LSP data structures
gen-lsp-types = "=0.10.0"
# Traversing directories, respecting ignore files
ignore = "=0.4.31"
# indented string literals
indoc = "=2.0.7"
# convert offsets <-> lsp positions
line-index = "=0.1.2"
# LSP support
lsp-server = "=0.10.0"
# URL handling
percent-encoding = "=2.3.2"
# indexing files
regex-automata = "=0.4.16"
# jimage support
ristretto_jimage = "=0.31.0"
# faster hashing for symbols, etc
rustc-hash = "=2.1.3"
# serialization
serde = "=1.0.229"
# json serialization
serde_json = "=1.0.151"
# Parser framework
tree-sitter = "=0.26.11"
# Parser for java language
tree-sitter-java-orchard = "=0.5.10"
# jar support
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[lints]
workspace = true

[profile.dev]
debug = "none"
lto = "off"

# optimize the hotspots to speed up dev runs
[profile.dev.package."regex-automata"]
opt-level = 1

[profile.dev.package."tree-sitter"]
opt-level = 1

[profile.dev.package."tree-sitter-java-orchard"]
opt-level = 1

# optimize mostly for size, but be reasonable
[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1

# optimize the hotspots for speed
[profile.release.package."regex-automata"]
opt-level = 3

[profile.release.package."tree-sitter"]
opt-level = 3

[profile.release.package."tree-sitter-java-orchard"]
opt-level = 3

# for use with linux perf
# RUSTFLAGS="-C force-frame-pointers=yes" must also be set.
[profile.profiling]
inherits = "release"
debug = "full"
lto = "off"
