[project]
name = "pegon"
version = "1.0.4"
description = "Fast Java language server"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
authors = [{ name = "Robert Muir", email = "rmuir@apache.org" }]
keywords = ["java", "lint", "tree-sitter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Java",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: General",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Changelog = "https://github.com/rmuir/pegon/releases"
Documentation = "https://github.com/rmuir/pegon/wiki"
Repository = "https://github.com/rmuir/pegon"

[dependency-groups]
dev = [
  # github actions
  "actionlint-py==1.7.12.24",
  # yaml schema
  "check-jsonschema==0.37.4",
  # commits
  "committed==1.1.11",
  # yaml formatting
  "google-yamlfmt==0.21.0",
  # git hooks and repository checks
  "prek==0.4.9",
  # markdown
  "rumdl==0.2.34",
  # bash in github actions
  "shellcheck-py==0.11.0.1",
  # toml
  "tombi==1.2.0",
  # spelling
  "typos==1.48.0",
  # this file
  "validate-pyproject[all]==0.25",
  # yaml linting
  "yamllint==1.38.0",
  # github actions
  "zizmor==1.27.0",
]

[build-system]
requires = ["maturin==1.14.1"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "pegon"
