[package]
name = "xtask"
description = "xtasks for pegon"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
# Make use of main project
pegon = { path = ".." }
# Generate manual pages
clap = { version = "4.5.58", features = ["derive"] }
# Generate manual pages
clap_mangen = "0.2.31"
# Generate shell completions
clap_complete = "4.5.66"
